# foodapp

./: Cargo.toml  Makefile  \
api/: Cargo.toml
api/src/: lib.rs  middleware.rs  models.rs  requests.rs  responses.rs  schema.rs  server_functions.rs  session_management.rs
api/src/models/: auth.rs  restaurants.rs
desktop/: Cargo.toml
desktop/src/: desktop.rs  main.rs  server.rs
desktop/src/desktop/: app.rs  layouts.rs  route.rs
desktop/src/desktop/layouts/: go_back.rs  page.rs  view.rs
mobile/: Cargo.toml
mobile/src/: main.rs  mobile.rs  server.rs
mobile/src/desktop/: layouts.rs
mobile/src/mobile/: app.rs  route.rs
mobile/src/mobile/layouts/: go_back.rs  mobile_navbar.rs  mobile_top_bar.rs  view.rs
server/database/: docker-compose.yml
server/database/creation/sql/: create_tables.sql
server/src/: lib.rs
serving/: .env  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yml
serving/migrations/2025-04-06-123441_create_tables/: down.sql  up.sql
serving/migrations/2025-04-08-163822_sample_restaurants/: down.sql  up.sql
serving/migrations/2025-04-17-085547_add_ratings/: up.sql
serving/src/: lib.rs
ui/: Cargo.toml
ui/assets/styling/components/: back_button.css  favourite_button.css  navbar.css  navbar_button.css  page.css  page_header.css  restaurant_result.css  restaurant_scroll.css  top_bar.css  view.css
ui/assets/styling/pages/: account.css  favourite.css  home.css  not_found.css  restaurant.css  search.css
ui/src/: components.rs  icons.rs  lib.rs  pages.rs
ui/src/components/: back_button.rs  color_mode.rs  favourite_button.rs  navbar.rs  navbar_button.rs  page.rs  page_header.rs  rating.rs  ratings_bar.rs  restaurant_result.rs  restaurant_scroll.rs  top_bar.rs  view.rs
ui/src/pages/: account.rs  distance.rs  favourite.rs  home.rs  not_found.rs  pricing.rs  restaurant.rs  search.rs
web/: Cargo.toml
web/assets/: platform.css
web/src/: app.rs  desktop.rs  layouts.rs  lib.rs  main.rs  prelude.rs  route.rs  server.rs
web/src/desktop/: layouts.rs
web/src/layouts/: page.rs  view.rs  web_navbar.rs
web/src/web/: app.rs  route.rs
web/src/web/layouts/: mobile_navbar.rs  mobile_top_bar.rs  page.rs
