[workspace]
resolver = "2"
members = [
    "ui",
    "desktop",
    "mobile",
    "serving",
    "api"
]

[workspace.dependencies]
dioxus = { version = "0.6", features = ["fullstack", "router"] }
ui = { path = "ui" }
api = { path = "api" }
serving = { path = "serving" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


