[workspace]
resolver = "2"
members = [
    "ui",
    "desktop",
    "mobile",
    "serving",
    "api",
    "web"
]

[workspace.dependencies]
dioxus = { version = "0.6.0", features = ["fullstack", "router"] }
ui = { path = "ui" }
api = { path = "api" }
serving = { path = "serving" }
web = { path = "web" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"


