[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
axum = { version = "0.7", optional = true }
diesel = { version = "2.0", features = ["postgres_backend", "chrono", "serde_json", "uuid"] }
deadpool-diesel = { version = "0.6", optional = true }
postgis_diesel = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
serde = { version = "1" }
serde_json = { version = "1" }

[features]
default = []
server = ["dioxus/server", "axum", "deadpool-diesel/postgres"]
client = []
