[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
axum = { version = "0.7", optional = true }
axum-extra = { version = "0.10", features = ["cookie-private"], optional = true}
diesel = { version = "2.0", features = ["postgres_backend", "chrono", "serde_json", "uuid", "ipnet-address"] }
deadpool-diesel = { version = "0.6", optional = true }
postgis_diesel = { version = "2", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde"] }
serde = { version = "1" }
serde_json = { version = "1" }
argon2 = { version = "0.5", optional = true }
derive_builder = { version = "0.20" }
derive-new = { version = "0.7" }
rand = { version = "0.9", optional = true }
ipnet = { version = "2.11", features = ["serde"] }


[features]
default = []
server = ["dioxus/server", "axum", "axum-extra", "deadpool-diesel/postgres", "argon2", "rand"]
client = []
