[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
serving = { workspace = true, optional = true }
ui = { workspace = true, optional = true }
dotenv = { version = "0.15.0" }

[features]
default = []
server = ["dioxus/server", "serving"]
desktop = ["dioxus/desktop", "ui"]
