[package]
name = "mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
serving = { workspace = true, optional = true }
ui = { workspace = true, optional = true }
dotenv = { version = "0.15.0" }
# dioxus_storage = { git = "https://github.com/DioxusLabs/sdk", optional = true}
dioxus_storage = { version = "0", optional = true }

[features]
default = []
server = ["dioxus/server", "serving"]
mobile = ["dioxus/mobile", "ui", "dioxus_storage"]
