[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
api = { workspace = true, features = ["client"], no-default = true }
change-case = { version = ">=0.2.0" }
serde_json = { version = "1.0" }
uuid = { version = "1", features = ["serde"] }
dioxus_storage = { git = "https://github.com/DioxusLabs/sdk" }
base64 = { version = "0.22" }
percent-encoding = { version = "2.3" }
