[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
ui = { workspace = true }
serving = { workspace = true, optional = true }
dotenv = { version = "0.15.0" }
change-case = { version = ">=0.2.0" }
dioxus_storage = { git = "https://github.com/DioxusLabs/sdk" }
percent-encoding = { version = "2.3" }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "serving"]
